--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" type="image/jpeg" href="images/carlosyajie_20220815_075410_1.jpg">
 
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="mediaqueries.css"/>
+
   </head>
 
   <body>
@@ -28,8 +29,8 @@
   
     <nav id="tab-nav">
       <div class="t-logo">Carlos Yajie</div>
-      <div class="nave-links">
-        <ul>
+      <div>
+        <ul class="nave-links">
           <li><a href="#profile">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -40,8 +41,8 @@
   
     <nav id="phone-nav">
       <div class="p-logo">Carlos</div>
-      <div class="navi-links">
-        <ul>
+      <div>
+        <ul class="navi-links">
           <li><a href="#profile">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
