modified readme, images, html, css , mediaqueries

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Contact Info
           </button>
 
-          <button class="btn btn-color-2" onclick="location.href='http://127.0.0.1:5504/'">
+          <button class="btn btn-color-2" onclick="location.href='https://crlsyajie.github.io/SurveyForm/'">
             Survey Form
           </button>
 
@@ -143,10 +143,11 @@
                 class="icon"
               />
               <h3>Certificate</h3>
-              <p>Google Certificate<br />Foundation of Data SCience</p>
-              <p>Google Certificate<br />Foundations Data, Everywhere</p>
-              <p>Google Certificate<br />Get Started with Pyhton</p>
-              <p>Google Certificate<br />Translate Data into Insights</p>
+              
+              <p>Google Certificate Foundation of Data SCience</p>
+              <p>Google Certificate Foundations Data, Everywhere</p>
+              <p>Google Certificate Get Started with Pyhton</p>
+              <p>Google Certificate Translate Data into Insights</p>
             </div>
 
             
@@ -336,6 +337,10 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Game Landing Page</h2>
+              <div class="co-author">
+                <p>Co-Author: John Razec Agno</p>
+                <p>Co-Author: Bernadette Awatin</p>
+              </div>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -360,6 +365,9 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Climate Project</h2>
+            <div class="co-author">
+              <p>Author: Carlos Yajie Fetizanan</p>
+            </div>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -384,6 +392,9 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Survey Form</h2>
+            <div class="co-author">
+              <p>Author: Carlos Yajie Fetizanan</p>
+            </div>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
