modified html, css, mediaquerries add img

--- a/index.html
+++ b/index.html
@@ -160,13 +160,71 @@
         </div>
       </div>
 
+      
+
       <img
         src="./images/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"/>
 
+
     </section>
+
+    <section id="photo_slider">
+      <h1 class="title4">My Versions</h1>
+      <p class="section__text__p6">I’m an IT professional who wears many hats: Coder Yajie focuses on crafting clean, efficient code; Architect Yajie excels in designing scalable software solutions; Innovator Yajie is driven by a passion for exploring new ideas; and Leader Yajie brings projects to life with effective teamwork and vision. Discover how these roles come together in my work and let’s collaborate to turn innovative concepts into reality!</p>
+      <div class="wrapper">
+        <div class="container">
+            <input type="radio" name="slide" id="c1" checked>
+            <label for="c1" class="card">
+                <div class="row">
+                    <div class="icon">1</div>
+                    <div class="description">
+                        <h4>Coder Yajie</h4>
+                        <p>Winter has so much to offer -
+                         creative activities</p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c2" >
+            <label for="c2" class="card">
+                <div class="row">
+                    <div class="icon">2</div>
+                    <div class="description">
+                        <h4>Creative Yajie</h4>
+                        <p>Gets better every day -
+                         stay tuned</p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c3" >
+            <label for="c3" class="card">
+                <div class="row">
+                    <div class="icon">3</div>
+                    <div class="description">
+                        <h4>Innovator Yajie</h4>
+                        <p>Help people all over the world</p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c4" >
+            <label for="c4" class="card">
+                <div class="row">
+                    <div class="icon">4</div>
+                    <div class="description">
+                        <h4>Leader Yajie</h4>
+                        <p>Space engineering becomes
+                         more and more advanced</p>
+                    </div>
+                </div>
+            </label>
+        </div>
+    </div>
+
+
+    </section>
+
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
@@ -194,6 +252,7 @@
                   alt="Experience icon"
                   class="icon"
                 />
+
                 <div>
                   <h3>C#</h3>
                   <p>Intermediate</p>
@@ -315,6 +374,12 @@
           </div>
         </div>
       </div>
+
+      
+
+
+
+
       <img
         src="./images/arrow.png"
         alt="Arrow icon"
