add images modify style and html structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" type="image/jpeg" href="images/carlosyajie_20220815_075410_1.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css"/>
@@ -178,43 +181,44 @@
         <div class="container">
             <input type="radio" name="slide" id="c1" checked>
             <label for="c1" class="card">
-                <div class="row">
-                    <div class="icon">1</div>
-                    <div class="description">
-                        <h4>Coder Yajie</h4>
-                        <p>Focuses on pure programming skills.</p>
-                    </div>
-                </div>
+            <span class="row">
+                  <span class="icon">1</span>
+                  <span class="description">
+                      <span class="heading4">Coder Yajie</span>
+                      Focuses on pure programming skills.
+                  </span>
+            </span>
             </label>
             <input type="radio" name="slide" id="c2" >
             <label for="c2" class="card">
-                <div class="row">
-                    <div class="icon">2</div>
-                    <div class="description">
-                        <h4>Creative Yajie</h4>
-                        <p>Specializes in designing systems or software architectures.</p>
-                    </div>
-                </div>
+            <span class="row">
+                <span class="icon">2</span>
+                <span class="description">
+                  <span class="heading4">Creative Yajie</span>
+                  Specializes in designing systems or software architectures.
+                </span>
+              </span>
             </label>
+
             <input type="radio" name="slide" id="c3" >
             <label for="c3" class="card">
-                <div class="row">
-                    <div class="icon">3</div>
-                    <div class="description">
-                        <h4>Innovator Yajie</h4>
-                        <p> The creative version that pushes for innovation.</p>
-                    </div>
-                </div>
+            <span class="row">
+                <span class="icon">3</span>
+                <span class="description">
+                  <span class="heading4">Innovator Yajie</span>
+                  The creative version that pushes for innovation.
+                </span>
+              </span>
             </label>
             <input type="radio" name="slide" id="c4" >
             <label for="c4" class="card">
-                <div class="row">
-                    <div class="icon">4</div>
-                    <div class="description">
-                        <h4>Leader Yajie</h4>
-                        <p> Manages and leads teams or projects.</p>
-                    </div>
-                </div>
+            <span class="row">
+                <span class="icon">4</span>
+                <span class="description">
+                  <span class="heading4">Leader Yajie</span>
+                  Manages and leads teams or projects.
+                </span>
+            </span>
             </label>
         </div>
     </div>
@@ -398,25 +402,25 @@
               Artworks
           </h1>
           <div class="authors">
-              <h2>crlsbrook</h2>
-              <p>
-                  Subscribe to the channel to watch many interesting videos
+              <h2><a href="https://www.instagram.com/p/B1DIFBuFx1K/?igsh=OWQ3YTdkajY1aW83">crlsbrook</a></h2>
+              <p class="insdes">
+                  Follow my <a href="https://www.instagram.com/p/B1DIFBuFx1K/?igsh=OWQ3YTdkajY1aW83">Instagram</a> for more artworks.
               </p>
           </div>
           <div class="model"></div>
         </div>
 
         <div class="sliders" style="--quantity: 10">
-            <div class="items" style="--position: 1"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 2"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 3"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 4"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 5"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 6"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 7"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 8"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 9"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
-            <div class="items" style="--position: 10"><img src="images/BSIT_1204_Fetizanan_CY_PIC.jpg" alt=""></div>
+            <div class="items" style="--position: 1"><img src="images/ClipDown.App_189250963_162994652498888_4550178640156890756_n.jpg" alt=""></div>
+            <div class="items" style="--position: 2"><img src="images/ClipDown.App_323877481_205569221880362_3622419342224073259_n.jpg" alt=""></div>
+            <div class="items" style="--position: 3"><img src="images/ClipDown.App_326157343_862475408147043_6575403140703709750_n.jpg" alt=""></div>
+            <div class="items" style="--position: 4"><img src="images/ClipDown.App_348689544_935873477686377_4828992458786684836_n.jpg" alt=""></div>
+            <div class="items" style="--position: 5"><img src="images/ClipDown.App_427469023_949324080239238_4476327003341317107_n.jpg" alt=""></div>
+            <div class="items" style="--position: 6"><img src="images/ClipDown.App_428399941_1663350750862524_5937866129382245640_n.jpg" alt=""></div>
+            <div class="items" style="--position: 7"><img src="images/ClipDown.App_67098198_231835717799933_4646126750578158502_n.jpg" alt=""></div>
+            <div class="items" style="--position: 8"><img src="images/ClipDown.App_88281149_194161811810754_7692391593369145007_n.jpg" alt=""></div>
+            <div class="items" style="--position: 9"><img src="images/ClipDown.App_91112915_2670347969954013_1644843738793000602_n.jpg" alt=""></div>
+            <div class="items" style="--position: 10"><img src="images/458235146_1567999180821129_9020186214232806859_n.jpg" alt=""></div>
         </div>
     
     </div>
