modiy names of pictures

--- a/index.html
+++ b/index.html
@@ -411,8 +411,16 @@
         </div>
 
         <div class="sliders" style="--quantity: 10">
-            <div class="items" style="--position: 1"><img src="images/ClipDown.App_189250963_162994652498888_4550178640156890756_n.jpg" alt=""></div>
-            
+            <div class="items" style="--position: 1"><img src="images/uno.jpg" alt=""></div>
+            <div class="items" style="--position: 2"><img src="images/dos.jpg" alt=""></div>
+            <div class="items" style="--position: 3"><img src="images/tres.jpg" alt=""></div>
+            <div class="items" style="--position: 4"><img src="images/quatro.jpg" alt=""></div>
+            <div class="items" style="--position: 5"><img src="images/singco.jpg" alt=""></div>
+            <div class="items" style="--position: 6"><img src="images/sies.jpg" alt=""></div>
+            <div class="items" style="--position: 7"><img src="images/syete.jpg" alt=""></div>
+            <div class="items" style="--position: 8"><img src="images/ocho.jpg" alt=""></div>
+            <div class="items" style="--position: 9"><img src="images/nueve.jpg" alt=""></div>
+            <div class="items" style="--position: 10"><img src="images/458235146_1567999180821129_9020186214232806859_n.jpg" alt=""></div>
         </div>
     
     </div>
