--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./images/carlosyajie_20220815_075410_1.jpg" alt="Carlos Yajie Profile pic" />
+        <img src="./images/413176132_1490694741788327_6171468843337700105_n.jpg" alt="Carlos Yajie Profile pic" />
       </div>
 
       <div class="section__text">
@@ -73,7 +73,7 @@
             Download CV
           </button>
 
-          <button class="btn btn-color-1" onclick="location.href='https://whatsapp.com/dl/'">
+          <button class="btn btn-color-1" onclick="location.href='#contact'">
             Contact Info
           </button>
 
@@ -118,7 +118,7 @@
       <div class="section-container">
         <div class="section__pic-container-2">
           <img
-            src="./images/BSIT_1204_Fetizanan_CY_PIC.jpg"
+            src="./images/BSIT_2101_Fetizanan.C.Y_PIC.jpg"
             alt="Profile picture"
             class="about-pic"/>
         </div>
@@ -155,7 +155,7 @@
 
             
           </div>
-          <div >
+          <div>
             <p class="text-container">
               Hello! I’m Yajie, and I’m thrilled to have you here. This is where creativity meets technology, showcasing my journey as an artist and information technology student. Explore my work, discover my projects, and see how my passion for art and tech blend into unique and innovative creations. Thank you for visiting, and I hope you find inspiration in what you see.
             </p>
