add readme screen size modify mediaqueries

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 alt="Experience icon"
                 class="icon"
               />
-              <h3>Eductation</h3>
+              <h3 class="heading3">Eductation</h3>
               <p>2+ years Informtion Technology Student</p>
               <p>8+ years Visual Artist</p>
               <p>Senior High School Completer</p>
@@ -146,7 +146,7 @@
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Certificate</h3>
+              <h3 class="heading3">Certificate</h3>
               
               <p><a href="https://www.coursera.org/account/accomplishments/verify/2FUHVE5H91E2" class="certlink">Google Certificate Foundation of Data Science</a></p>
               <p><a href="https://www.coursera.org/account/accomplishments/verify/C1MIXJ1WKAVY" class="certlink">Google Certificate Foundations Data, Everywhere</a></p>
@@ -159,7 +159,7 @@
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Certificate</h3>
+              <h3 class="heading3">Certificate</h3>
               
               <p><a href="https://www.datacamp.com/completed/statement-of-accomplishment/course/48acb1525e2b31d568156da6963b44678292a92b" class="certlink">Introduction SQL</a></p>
               <p><a href="https://www.datacamp.com/completed/statement-of-accomplishment/course/21df9b5cc3f30bf2e0f37963b956d3d487db795a" class="certlink">Intermediate SQL</a></p>
