--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
               <article>
                 <img
-                  src="./images/checkmark.png"
+                  src="./images/play.png"
                   alt="Experience icon"
                   class="icon"/>
 
@@ -264,7 +264,7 @@
 
               <article>
                 <img
-                  src="./images/checkmark.png"
+                  src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -277,7 +277,7 @@
 
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -289,7 +289,7 @@
 
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -308,7 +308,7 @@
             <div class="article-container">
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -320,7 +320,7 @@
 
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -332,7 +332,7 @@
 
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -344,7 +344,7 @@
 
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -364,7 +364,7 @@
             <div class="article-container">
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -376,7 +376,7 @@
 
               <article>
                 <img
-                src="./images/checkmark.png"
+                src="./images/play.png"
                   alt="Experience icon"
                   class="icon"
                 />
